# langchain_basic

./: LICENSE  README.md  main.py  pyproject.toml
chain/: __init__.py  rantai.py
model/: __init__.py  config.py
prompt/: prompt.py
