[project]
name = "langchain-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.12",
    "markdown>=3.10.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
